<resources>
    <string name="app_name">Usend</string>
    <string name="lbl_OK">OK</string>
    <string name="lbl_okay">Okay</string>
    <string name="lbl_no">No</string>
    <string name="paymentstatus">COMPLETED</string>
    <string name="card_message">Card add successfully ,please click on back arrow to refresh card list</string>
    <string name="msg_no_records">No Records Found</string>
    <string name="default_loading_message">Loading…</string>
    <string name="default_internet_message">No internet connection.</string>
    <string name="lbl_tap_to_exit">Tap again to exit</string>
    <string name="msg_profile_update_successfully">Profile updated successfully</string>
    <string name="lbl_lorem_ipsum">What is Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s standard.</string>
    <string name="lbl_session_expired_msg">Your session has been expired, please login again to continue.</string>
    <string name="lbl_session_expired">Session Expired.</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_intro_title1">Coverage around the world</string>
    <string name="lbl_intro_title2">Free shipping calculator</string>
    <string name="lbl_intro_title3">Realtime on Tracking</string>
    <string name="lbl_intro_title4">Fast Delivery Service</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_card_delete_msg"> This card is used for auto shipment so can not delete it</string>
    <string name="lbl_card_update_msg"> This card is used for auto shipment so can not update it</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_auth_desc">Sign In/Sign Up to find\ncourier details you received</string>
    <string name="lbl_mailbox">Mailbox</string>
    <string name="lbl_calculator">Calculator</string>
    <string name="lbl_available">Not Available</string>
    <string name="lbl_fedex">FedEx Express</string>
    <string name="lbl_bussiness">4–6 Business Days</string>
    <string name="lbl_address_local">123 Fake Street. Seattle, WA 98112 Chicago Illinois, USA - 60007</string>
    <string name="select">Select</string>
    <string name="lbl_order_history">Order History</string>
    <string name="lbl_concierge">Concierge</string>
    <string name="lbl_concierge_req">Concierge Requests</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_wel_come">Welcome Back!</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter_your_email">Enter your email</string>
    <string name="lbl_enter_your_password">Enter password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_dont_have_account">Don\'t have an account?\u0020</string>
    <string name="lbl_dont_have_account_signup">Don\'t have an account? Sign Up</string>
    <string name="msg_please_enter_email">Please enter email address!</string>
    <string name="msg_valid_email">Please enter valid email address!</string>
    <string name="msg_please_enter_valid_email">Please enter valid email address</string>
    <string name="msg_please_enter_password">Please enter password!</string>
    <string name="msg_too_small_password">Password must be of 6 characters long!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_enter_your_first_name">Enter first name</string>
    <string name="lbl_enter_your_last_name">Enter last name</string>
    <string name="lbl_re_password">Re-Password</string>
    <string name="lbl_i_agree_to_T_and_c">I agree to U-SEND Terms &amp; Conditions and Privacy Policy</string>
    <string name="lbl_i_agree">I agree to U-SEND\u0020</string>
    <string name="lbl_t_and_c">Terms &amp; Conditions\u0020</string>
    <string name="lbl_and">&amp;\u0020</string>
    <string name="lbl_subscription_cancelresponse">Subscription canceled successfully!</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="lbl_already_have_an_account">Already have an account?\u0020</string>
    <string name="msg_first_name_can_not_be_blank">Please enter first name</string>
    <string name="msg_last_name_can_not_be_blank">Please enter last name</string>
    <string name="msg_password_does_not_match">Password and Re-Password must be same</string>
    <string name="msg_current_and_new_passwords_same">Current password and new password can\'t be same.</string>
    <string name="msg_password_strength">Password should be more than 8 characters long and contains at least one digit, upper case &amp; lower case letter.</string>
    <string name="msg_accept_terms_policy">Please accept Terms &amp; Conditions and Privacy Policy</string>
    <string name="msg_continue_accept_terms_policy">I agree to Autoship </string>
    <string name="lbl_billing_address">Billing Address</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_address_line_1">Address line 1</string>
    <string name="lbl_address_line_2">Address line 2</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_zipcode">Zip Code</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_select_country_">Select Country</string>
    <string name="lbl_enter_zipcode">Enter Zip Code</string>
    <string name="lbl_enter_city">Enter city</string>
    <string name="lbl_enter_state">Enter state</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_enter_phone_number">Enter Phone Number</string>
    <string name="lbl_enter_address_line1">Please enter address line 1</string>
    <string name="lbl_enter_address_line2">Please enter address line 2</string>
    <string name="lbl_select_country">Please select country</string>
    <string name="msg_plz_enter_label_address">Please enter label of address</string>
    <string name="msg_plz_enter_receiver_name">Please enter receiver name</string>
    <string name="lbl_select_city">Please select city</string>
    <string name="lbl_select_state">Please select state</string>
    <string name="msg_plz_enter_zipcode">Please enter zipcode</string>
    <string name="lbl_select_country_code">Please select country code</string>
    <string name="lbl_please_enter_phone_number">Please enter phone number</string>
    <string name="lbl_please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="msg_valid_zipcode">Use 00000 if Zip Code is not available in your country</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl__enter_card_holder_name">Enter card holder name</string>
    <string name="lbl_card_holder_name">Card Holder Name</string>
    <string name="lbl_enter_CVV">Enter CVV Number</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_submit">Submit</string>
    <string name="msg_card_number_can_be_blank">Please enter card number!</string>
    <string name="msg_please_enter_valid_card_number">Please enter valid card number</string>
    <string name="msg_card_name_can_not_be_blank">Please enter card name!</string>
    <string name="msg_select_valid_month">Please enter valid month</string>
    <string name="msg_select_valid_year">Please enter valid year</string>
    <string name="msg_enter_valid_month_year">Please enter valid month and year</string>
    <string name="msg_cvv_can_not_be_blank">Please enter CVV number</string>
    <string name="msg_enter_valid_cvv_number">Please enter valid CVV Number</string>
    <string name="lbl_otp_desc">We have sent you a 4 digit verification code on the mobile number associated with your email address</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_enter_otp">Please enter OTP</string>
    <string name="msg_enter_valid_otp">Please enter valid OTP</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="msg_otp_send_success">OTP sent to mobile number : %s</string>
    <string name="lbl_enter_phone_number_here">Enter your phone number here</string>
    <string name="msg_please_enter_new_number">Please enter new phone number</string>
    <string name="lbl_search_here">Search here</string>
    <string name="lbl_no_relusst_found">No result found</string>
    <string name="lbl_forgot_password_">Forgot Password</string>
    <string name="lbl_send_password">We will send you a temporary password to your registered email address</string>
    <string name="msg_password_sent">We have sent a new password on the email address, please use that password while login.</string>
    <string name="lbl_packages_in_mailbox">Packages in mailbox</string>
    <string name="lbl_packages">Packages</string>
    <string name="lbl_package_number">Package Number :</string>
    <string name="lbl_package_number_">Package Number</string>
    <string name="lbl_received_date">Received Date</string>
    <string name="lbl_days_remaining">Days Remaining</string>
    <string name="lbl_days">Days</string>
    <string name="lbl_dimensions">Dimensions</string>
    <string name="lbl_dimensions_colon">Dimensions:</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_weight_colon">Weight:</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_create_shipment">Create Shipment</string>
    <string name="lbl_trash_shipment">Trash</string>
    <string name="lbl_confirm_trash">Are you sure you want to trash this package?</string>
    <string name="lbl_no_packages_found">No Packages found!</string>
    <string name="lbl_deselect_all">Deselect all </string>
    <string name="lbl_split_processing">Split Processing</string>
    <string name="msg_split_processing">This Package is under spilt processing</string>
    <string name="msg_plz_select_package">Please select a package to create shipment.</string>
    <string name="msg_plz_select_package_trash">Please select a package to trash.</string>
    <string name="lbl_package_details">Package Details</string>
    <string name="lbl_package_details_colon">Package Details:</string>
    <string name="lbl_package_num">Package Number</string>
    <string name="lbl_package_type">Package Type</string>
    <string name="lbl_from">From</string>
    <string name="lbl_do_you_want_to_split_package">Do you want to split the package?</string>
    <string name="lbl_split_package_into">Split package into</string>
    <string name="lbl_split_packages">Split Packages</string>
    <string name="lbl_do_you_want_to_split_packages">Do you want to split package?</string>
    <string name="lbl_split_charges">Split Package might have\nadditional charges.</string>
    <string name="lbl_accept">Accept</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="alret">Alert</string>
    <string name="lbl_add_new_address">Add New Address</string>
    <string name="lbl_ship_to_address">Ship to Address</string>
    <string name="msg_are_you_sure_">Are you sure you want to delete this Address?</string>
    <string name="msg_plz_shipping_address">Please add a shipping address</string>
    <string name="msg_plz_shipping_method">Please select shipping method</string>
    <string name="lbl_shipping_method">Shipping Method</string>
    <string name="lbl_sort_by">Sort by</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_high_to_low">High to Low</string>
    <string name="lbl_low_to_high">Low to High</string>
</resources>