<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/matchWrap"
        android:paddingStart="@dimen/dimen_30dp"
        android:paddingEnd="@dimen/dimen_30dp"
        android:paddingTop="@dimen/dimen_25dp"
        android:paddingBottom="@dimen/dimen_20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSortByTitle"
            style="@style/CommonText.Style.16sp"
            android:text="@string/lbl_sort_by"
            android:textColor="@color/color2D2D2D"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPriceTitle"
            style="@style/CommonText.Style.16sp"
            android:text="@string/lbl_price"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@id/txtSortByTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintTop_toBottomOf="@id/txtPriceTitle"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbHighToLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/color2D2D2D"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:checked="true"
                android:button="@drawable/radio_address_button_selector"
                android:paddingStart="@dimen/dimen_10dp"
                android:text="@string/lbl_high_to_low"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbLowToHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/color2D2D2D"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:button="@drawable/radio_address_button_selector"
                android:paddingStart="@dimen/dimen_10dp"
                android:text="@string/lbl_low_to_high"/>

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>